fix: 포스트, 딜리트 수정